Kaggle Notebook | Statistics & Probability Credit Dataset | Version 4

--- a/statistics-probability-credit-dataset.ipynb
+++ b/statistics-probability-credit-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bd6f8dc",
+   "id": "9c434db8",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -14,10 +14,10 @@
      "shell.execute_reply.started": "2023-12-17T17:25:52.644096Z"
     },
     "papermill": {
-     "duration": 0.003631,
-     "end_time": "2023-12-29T06:07:59.657505",
+     "duration": 0.003284,
+     "end_time": "2023-12-30T12:23:27.888430",
      "exception": false,
-     "start_time": "2023-12-29T06:07:59.653874",
+     "start_time": "2023-12-30T12:23:27.885146",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed816c7e",
+   "id": "6f88d657",
    "metadata": {
     "papermill": {
-     "duration": 0.002958,
-     "end_time": "2023-12-29T06:07:59.663806",
+     "duration": 0.002811,
+     "end_time": "2023-12-30T12:23:27.894113",
      "exception": false,
-     "start_time": "2023-12-29T06:07:59.660848",
+     "start_time": "2023-12-30T12:23:27.891302",
      "status": "completed"
     },
     "tags": []
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b20a06c",
+   "id": "960ebdac",
    "metadata": {
     "papermill": {
-     "duration": 0.002779,
-     "end_time": "2023-12-29T06:07:59.669665",
+     "duration": 0.002378,
+     "end_time": "2023-12-30T12:23:27.898975",
      "exception": false,
-     "start_time": "2023-12-29T06:07:59.666886",
+     "start_time": "2023-12-30T12:23:27.896597",
      "status": "completed"
     },
     "tags": []
@@ -68,19 +68,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b4f3434",
+   "id": "fd0b6f44",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-29T06:07:59.678200Z",
-     "iopub.status.busy": "2023-12-29T06:07:59.677659Z",
-     "iopub.status.idle": "2023-12-29T06:08:01.642936Z",
-     "shell.execute_reply": "2023-12-29T06:08:01.641579Z"
+     "iopub.execute_input": "2023-12-30T12:23:27.905927Z",
+     "iopub.status.busy": "2023-12-30T12:23:27.905543Z",
+     "iopub.status.idle": "2023-12-30T12:23:29.471600Z",
+     "shell.execute_reply": "2023-12-30T12:23:29.470332Z"
     },
     "papermill": {
-     "duration": 1.973011,
-     "end_time": "2023-12-29T06:08:01.645699",
+     "duration": 1.573072,
+     "end_time": "2023-12-30T12:23:29.474654",
      "exception": false,
-     "start_time": "2023-12-29T06:07:59.672688",
+     "start_time": "2023-12-30T12:23:27.901582",
      "status": "completed"
     },
     "tags": []
@@ -118,13 +118,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5945eb7f",
+   "id": "2d0be9ca",
    "metadata": {
     "papermill": {
-     "duration": 0.002897,
-     "end_time": "2023-12-29T06:08:01.652005",
+     "duration": 0.002705,
+     "end_time": "2023-12-30T12:23:29.480376",
      "exception": false,
-     "start_time": "2023-12-29T06:08:01.649108",
+     "start_time": "2023-12-30T12:23:29.477671",
      "status": "completed"
     },
     "tags": []
@@ -136,19 +136,73 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7b6e2ed",
+   "id": "beb10dff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-29T06:08:01.661166Z",
-     "iopub.status.busy": "2023-12-29T06:08:01.660507Z",
-     "iopub.status.idle": "2023-12-29T06:08:01.711307Z",
-     "shell.execute_reply": "2023-12-29T06:08:01.710136Z"
+     "iopub.execute_input": "2023-12-30T12:23:29.488271Z",
+     "iopub.status.busy": "2023-12-30T12:23:29.487160Z",
+     "iopub.status.idle": "2023-12-30T12:23:29.511141Z",
+     "shell.execute_reply": "2023-12-30T12:23:29.510108Z"
     },
     "papermill": {
-     "duration": 0.059028,
-     "end_time": "2023-12-29T06:08:01.714311",
+     "duration": 0.030489,
+     "end_time": "2023-12-30T12:23:29.513640",
      "exception": false,
-     "start_time": "2023-12-29T06:08:01.655283",
+     "start_time": "2023-12-30T12:23:29.483151",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Reading the Dataset\n",
+    "credit=pd.read_csv('/kaggle/input/credit-data/german_credit_data.csv')\n",
+    "#copying the dataset\n",
+    "data=credit.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "acd2c982",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-30T12:23:29.521579Z",
+     "iopub.status.busy": "2023-12-30T12:23:29.521202Z",
+     "iopub.status.idle": "2023-12-30T12:23:29.541414Z",
+     "shell.execute_reply": "2023-12-30T12:23:29.540268Z"
+    },
+    "papermill": {
+     "duration": 0.026766,
+     "end_time": "2023-12-30T12:23:29.543903",
+     "exception": false,
+     "start_time": "2023-12-30T12:23:29.517137",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# dropping the column - Unnmaned:0 as it doesn't have much use.\n",
+    "data.drop('Unnamed: 0',axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "feb24605",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-30T12:23:29.551227Z",
+     "iopub.status.busy": "2023-12-30T12:23:29.550697Z",
+     "iopub.status.idle": "2023-12-30T12:23:29.569882Z",
+     "shell.execute_reply": "2023-12-30T12:23:29.568747Z"
+    },
+    "papermill": {
+     "duration": 0.025165,
+     "end_time": "2023-12-30T12:23:29.572024",
+     "exception": false,
+     "start_time": "2023-12-30T12:23:29.546859",
      "status": "completed"
     },
     "tags": []
@@ -175,7 +229,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Age</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Job</th>\n",
@@ -190,7 +243,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>67</td>\n",
        "      <td>male</td>\n",
        "      <td>2</td>\n",
@@ -203,7 +255,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>female</td>\n",
        "      <td>2</td>\n",
@@ -216,7 +267,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>49</td>\n",
        "      <td>male</td>\n",
        "      <td>1</td>\n",
@@ -232,40 +282,36 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Age  Gender  Job Housing Saving accounts Checking account  \\\n",
-       "0           0   67    male    2     own             NaN           little   \n",
-       "1           1   22  female    2     own          little         moderate   \n",
-       "2           2   49    male    1     own          little              NaN   \n",
+       "   Age  Gender  Job Housing Saving accounts Checking account  Credit_amount  \\\n",
+       "0   67    male    2     own             NaN           little           1169   \n",
+       "1   22  female    2     own          little         moderate           5951   \n",
+       "2   49    male    1     own          little              NaN           2096   \n",
        "\n",
-       "   Credit_amount  Duration    Purpose  \n",
-       "0           1169         6   radio/TV  \n",
-       "1           5951        48   radio/TV  \n",
-       "2           2096        12  education  "
+       "   Duration    Purpose  \n",
+       "0         6   radio/TV  \n",
+       "1        48   radio/TV  \n",
+       "2        12  education  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Reading the Dataset\n",
-    "credit=pd.read_csv('/kaggle/input/credit-data/german_credit_data.csv')\n",
-    "#copying the dataset\n",
-    "data=credit.copy()\n",
-    "# first three rows of credit_data dataset\n",
+    "# first three rows of data dataset\n",
     "data.head(3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01605e06",
+   "id": "68636a1c",
    "metadata": {
     "papermill": {
-     "duration": 0.003307,
-     "end_time": "2023-12-29T06:08:01.721313",
+     "duration": 0.00274,
+     "end_time": "2023-12-30T12:23:29.577914",
      "exception": false,
-     "start_time": "2023-12-29T06:08:01.718006",
+     "start_time": "2023-12-30T12:23:29.575174",
      "status": "completed"
     },
     "tags": []
@@ -310,14 +356,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.433469,
-   "end_time": "2023-12-29T06:08:02.347150",
+   "duration": 5.242956,
+   "end_time": "2023-12-30T12:23:30.102273",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-12-29T06:07:55.913681",
+   "start_time": "2023-12-30T12:23:24.859317",
    "version": "2.4.0"
   }
  },
