Kaggle Notebook | Titanic Survival Prediction-1 | Version 2

--- a/titanic-survival-prediction-1.ipynb
+++ b/titanic-survival-prediction-1.ipynb
@@ -1,23 +1,69 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ad96be44",
+   "cell_type": "markdown",
+   "id": "689bfde0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-04-04T04:08:10.465526Z",
-     "iopub.status.busy": "2024-04-04T04:08:10.465120Z",
-     "iopub.status.idle": "2024-04-04T04:08:11.295875Z",
-     "shell.execute_reply": "2024-04-04T04:08:11.293796Z"
+     "iopub.execute_input": "2024-04-04T03:07:17.698028Z",
+     "iopub.status.busy": "2024-04-04T03:07:17.697455Z",
+     "iopub.status.idle": "2024-04-04T03:07:18.806089Z",
+     "shell.execute_reply": "2024-04-04T03:07:18.804999Z",
+     "shell.execute_reply.started": "2024-04-04T03:07:17.697998Z"
     },
     "papermill": {
-     "duration": 0.837561,
-     "end_time": "2024-04-04T04:08:11.298626",
+     "duration": 0.002346,
+     "end_time": "2024-04-06T07:43:38.563454",
      "exception": false,
-     "start_time": "2024-04-04T04:08:10.461065",
+     "start_time": "2024-04-06T07:43:38.561108",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Titanic Survival Prediction\n",
+    "Given a custom dataset which represents the details of passengers who were in the great 'Titanic' ship.\n",
+    "\n",
+    "Our task is to find whether a person survived or not after the incident using various models provided by `scikit-learn`.\n",
+    "\n",
+    "Your aim is to get the predictions using different models by tuning the parameters of your choice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dae2cd6",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001453,
+     "end_time": "2024-04-06T07:43:38.566900",
+     "exception": false,
+     "start_time": "2024-04-06T07:43:38.565447",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Importing Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e4997bdd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-06T07:43:38.572421Z",
+     "iopub.status.busy": "2024-04-06T07:43:38.571726Z",
+     "iopub.status.idle": "2024-04-06T07:43:40.752783Z",
+     "shell.execute_reply": "2024-04-06T07:43:40.751743Z"
+    },
+    "papermill": {
+     "duration": 2.186604,
+     "end_time": "2024-04-06T07:43:40.755152",
+     "exception": false,
+     "start_time": "2024-04-06T07:43:38.568548",
      "status": "completed"
     },
     "tags": []
@@ -39,6 +85,9 @@
     "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import matplotlib.pyplot as plt #visualization\n",
+    "import seaborn as sns\n",
+    "import sklearn # machine learninng modelling\n",
     "\n",
     "# Input data files are available in the read-only \"../input/\" directory\n",
     "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
@@ -88,14 +137,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3.930328,
-   "end_time": "2024-04-04T04:08:11.620421",
+   "duration": 8.057995,
+   "end_time": "2024-04-06T07:43:43.876765",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-04-04T04:08:07.690093",
+   "start_time": "2024-04-06T07:43:35.818770",
    "version": "2.5.0"
   }
  },
